# duncanlock.net

./: .done.txt  .gitignore  .htaccess  .todo.txt  .vale.ini  Makefile  README.adoc  README.md  cache  duncanlock.net-content.sublime-project  duncanlock.net-content.sublime-workspace  duncanlock.net.sublime-project  duncanlock.net.sublime-workspace  get-ytm-playlist.py  includes.sh  list-tags.sh  md2adoc.sh  new-gig.sh  new-post.sh  new-thanks-oss.sh  new-til.sh  opml2adoc.py  pelicanconf.py  publishconf.py  pyproject.toml  requirements-venv.txt  requirements.txt  rst2adoc.sh  s3_redirection_rules.json  s3_redirection_rules.xml  tasks.py  tmp.html  update-thanks.sh  ytm-playlist2adoc.py
content/data/: World Religion Dataset - Regional Religion Dataset cb_data.TXT  World Religion Dataset - Regional Religion Dataset.XLS
content/draft-pages/: about.adoc  about.rst  fermenting.adoc  fermenting.md
content/draft-posts/: are-movies-getting-worse.rst  are-movies-getting-worse.rst.adoc  contrary-to-popular-belief-everything-is-getting-better.rst  contrary-to-popular-belief-everything-is-getting-better.rst.adoc  life-as-waltz.rst  (+14 more)
extras/: .htaccess
old_rst_content_backup/: 404.rst  410.rst  a-marvellous-incomplete-compendium-of-reddit-automatons-bots.rst  better-figures-and-images-plugin-for-pelican.rst  better-figures-and-images-plugin-for-pelican.rst.adoc  how-i-built-this-website-using-pelican-part-1-setup.rst  how-i-built-this-website-using-pelican-part-1-setup.rst.adoc  how-i-upgraded-this-website-to-pelican-33.rst  how-i-upgraded-this-website-to-pelican-36.rst  how-to-set-your-compose-key-on-xfce-xubuntu-linux.rst  how-to-switch-to-compton-for-beautiful-tear-free-compositing-in-xfce.rst  http-418-unused-teapot-dreamhost.rst  it-was-a-good-week.rst  reliably-building-virtualbox-guest-additions-on-centos-6x.rst  the-smart-guide-to-stack-overflow-zero-to-hero.rst.adoc  useful-thunar-custom-actions.rst.adoc
(+412 files in other folders)
