[tool.poetry]
name = "duncanlock.net"
version = "0.1.0"
description = "Duncan Locks personal site. Includes my blog, colitis resources, SCD recipes, portfolio and CV/Resume."
authors = ["Duncan Lock <duncan.lock@gmail.com>"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.1.0"
feedgenerator = "^2.0.0"
Jinja2 = "^3.0.3"
Pygments = "^2.11.2"
pytz = "^2021.3"
blinker = "^1.4"
Unidecode = "^1.3.4"
MarkupSafe = "^2.1.1"
python-dateutil = "^2.8.2"
beautifulsoup4 = "^4.10.0"
cssprefixer = "^1.4.1"
cssutils = "^2.4.0"
invoke = "^1.6.0"
pelican = "4.7.2"
pelican-drafts = "^0.1.1"
pelican-series = "^2.1.0"
pelican-webassets = "^2.0.0"
scour = "^0.38.2"
livereload = "^2.6.3"
typogrify = "^2.0.7"
rcssmin = "^1.1.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
