[tool.poetry]
name = "duncanlock.net"
version = "0.1.0"
description = "Duncan Locks personal site. Includes my blog, colitis resources, SCD recipes, portfolio and CV/Resume."
authors = ["Duncan Lock <duncan.lock@gmail.com>"]
license = "Proprietary"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.10.0"
black = "^22.1.0"
blinker = "^1.4"
cssprefixer = "^1.4.1"
cssutils = "^2.4.0"
feedgenerator = "^2.0.0"
invoke = "^1.6.0"
Jinja2 = "^3.0.3"
livereload = "^2.6.3"
MarkupSafe = "^2.1.1"
pelican = "4.7.2"
pelican-drafts = "^0.1.1"
pelican-series = "^2.1.0"
pelican-webassets = "^2.0.0"
Pygments = "^2.11.2"
python = ">=3.8.1,<4.0"
python-dateutil = "^2.8.2"
pytz = "^2022.6"
rcssmin = "^1.1.0"
scour = "^0.38.2"
seaborn = "^0.12.1"
typogrify = "^2.0.7"
Unidecode = "^1.3.4"
ytmusicapi = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
